[tool.poetry]
name = "card-stats"
version = "0.1.0"
description = "Statistics applied to card games"
authors = ["Ivan Pupkin <ipupkin@untref.edu.ar>"]
readme = "README.md"
packages = [{include = "card_stats"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12,!=3.9.7"
matplotlib = "^3.7.1"
numpy = "^1.25.0"
statsmodels = "^0.14.0"
pillow = "<10.0.0"
pymc = "^5.7.2"
pyparsing = "^3.1.1"
cycler = "^0.11.0"
kiwisolver = "^1.4.4"
streamlit = "^1.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.277"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
